--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "lib_annex"
 version = "0.1.0"
-authors = ["Jason Goldberger <jlgoldb2@asu.edu>"]
+authors = ["Jason Goldberger <jasongoldberger@gmail.com>"]
 edition = "2018"
+include = [
+    "**/*.rs",
+    "Cargo.toml"
+]
 
 [dependencies]
