--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ include = [
     "**/*.rs",
     "Cargo.toml"
 ]
+description = "Annex native Rust backend utility"
+license = "MIT"
 
 [dependencies]
